--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "cocos-electron-builder",
+	"name": "creatiosoft-poker",
 	"version": "1.0.0",
-	"description": "cocos-electron-builder",
+	"description": "creatiosoft-poker",
 	"author": "supersu",
 	"main": "main.js",
 	"scripts": {
